[vectorapi] VectorMask.cast narrow operation returns incorrect value with SVE

XMLWordPrintable

    • b16
    • aarch64
    • linux

      The cast operation for VectorMask from wider type to narrow type returns incorrect result for the trueCount() (and on some SVE machines toLong() as well) of the resultant mask vector on SVE machines. It is because the higher order bits are not cleared (since the result is narrowed down) and trueCount() counts the number of true values in the higher order bits as well, returning incorrect result.

            Assignee:
            Bhavana Kilambi
            Reporter:
            Bhavana Kilambi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: